[project]
name = "claude-code-proxy"
version = "0.1.0"
description = "A proxy to convert Claude API requests to OpenAI/Gemini/Together.ai"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Regis Atkison", email = "regis@rgs.life"}
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "litellm>=1.30.10",
    "python-dotenv>=1.0.0",
]

